Hamburger working, navbar implemented on everypage, contribution page alignment fix.

--- a/styles.css
+++ b/styles.css
@@ -1083,7 +1083,8 @@ img {
     }
 
     .nav-links.active {
-        right: 0;
+        left: 75px;
+        top: 100px;
     }
 
     #darkModeToggle {
